# MLOps

./: README.md  __init__.py  data.py  main.py  model.py  predict_model  pyproject.toml  train_model
