[build-system]

requires = ["setuptools", "wheel"]

build-backend = "setuptools.build_meta"



[project]

name = "coocu"

version = "0.1.0"

authors = [{name = "YY", email = "yinayaomm@outlook.com"}]

description = "Something cool here."

requires-python = ">=3.8"

dynamic = ["dependencies"]



[tool.setuptools.dynamic]

dependencies = {file = ["requirements.txt"]}
