[build-system]

requires = ["setuptools", "wheel"]

build-backend = "setuptools.build_meta"



[project]

name = "coocu"

version = "0.1.0"

authors = [{name = "YY", email = "yinayaomm@outlook.com"}]

description = "Something cool here."

requires-python = ">=3.8"

dynamic = ["dependencies"]

dependencies = [
    'torch==2.1.0',
    'matplotlib>=3.8.1'
]

[tool.setuptools.dynamic]

# dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
